--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,9 @@ ul {
 .container {
   text-align: center;
   padding: .8em 1.2em;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .logo {
@@ -53,6 +56,52 @@ section {
   display: -ms-flexbox;
   display: flex;
   padding: 20px 0 60px 0;
+}
+
+.contact-section {
+  padding: 50px 0 50px 0;
+}
+
+.contact-section h1 {
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+}
+
+.meet-team {
+  border: 1px solid #4BAFA9;
+  border-radius: 20px;
+  margin: 20px 0;
+  background-color: #DEF2F1;
+  text-align: left;
+  padding-left: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.meet-team h3 {
+  text-align: center;
+}
+
+.meet-team a {
+  border-radius: 50%;
+}
+
+.meet-team a:hover {
+  -webkit-box-shadow: 0 0 11px #17242A;
+          box-shadow: 0 0 11px #17242A;
+}
+
+.meet-team .github-logo {
+  height: 50px;
+  width: auto;
+  float: right;
 }
 
 h1 {
@@ -198,6 +247,18 @@ nav ul li a:hover {
 }
 
 @media only screen and (min-width: 650px) {
+  .meet-team {
+    height: 250px;
+    width: 130px;
+    margin: 20px 10px;
+    text-align: center;
+    padding: 0 20px;
+    display: inline-block;
+  }
+  .meet-team .github-logo {
+    margin-right: 40px;
+    padding-top: 10px;
+  }
   section {
     padding: 30px 0 90px 0;
   }
@@ -276,6 +337,9 @@ nav ul li a:hover {
 }
 
 @media only screen and (min-width: 875px) {
+  .meet-team {
+    margin: 20px 40px;
+  }
   .logo {
     margin-left: 50px;
   }
@@ -316,9 +380,21 @@ nav ul li a:hover {
 }
 
 @media only screen and (min-width: 1024px) {
+  .meet-team {
+    height: 300px;
+    width: 150px;
+    margin: 20px 10px;
+    padding: 0 30px;
+  }
+  .meet-team .github-logo {
+    margin-right: 50px;
+  }
   .container {
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
+  }
+  nav {
+    padding-right: 50px;
   }
   h1 {
     font-size: 4.5em;
@@ -456,11 +532,26 @@ nav ul li a:hover {
 }
 
 @media only screen and (min-width: 1600px) {
+  .meet-team {
+    height: 355px;
+    width: 180px;
+    margin: 20px 40px;
+    padding: 0 30px;
+  }
+  .meet-team h3 {
+    font-size: 1.4em;
+    padding-top: 20px;
+  }
+  .meet-team .github-logo {
+    margin-right: 50px;
+    height: 75px;
+    padding-top: 20px;
+  }
   .container {
-    width: 65%;
+    width: 75%;
   }
   nav {
-    padding-right: 110px;
+    padding-right: 70px;
     padding-top: 10px;
   }
   .hand-swipe {
@@ -501,12 +592,12 @@ nav ul li a:hover {
     margin: 0 120px;
   }
   .white-container .iphone {
-    margin-right: 20em;
-    margin-left: 5em;
+    margin-right: 15em;
+    margin-left: 12em;
   }
   .white-container .android {
-    margin-left: 15em;
-    margin-right: 12em;
+    margin-left: 22em;
+    margin-right: 8em;
   }
   .cta {
     padding: 1.1em 6.5em;
@@ -514,6 +605,16 @@ nav ul li a:hover {
   }
   .white-container2 ul {
     margin: 0 100px 20px;
+  }
+}
+
+@media only screen and (min-width: 1750px) {
+  .meet-team {
+    width: 200px;
+    margin: 20px 60px;
+  }
+  .meet-team .github-logo {
+    margin-right: 60px;
   }
 }
 /*# sourceMappingURL=main.css.map */
